--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@crowdin/crowdin-api-client": "^1.8.16",
     "@ethersproject/experimental": "^5.0.1",
     "@pancakeswap-libs/sdk": "1.0.1",
+    "@googolpot/sdk": "https://github.com/googolpot/sdk/archive/refs/heads/main.tar.gz",
     "@pancakeswap-libs/uikit": "^0.23.0",
     "@popperjs/core": "^2.4.4",
     "@reach/dialog": "^0.10.3",
